infrastructure/03-traefik/foreign/fritz/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: fritz-ingress
  namespace: traefik
spec:
  entryPoints:
    - websecure-local
  tls: {}
  routes:
  - match: Host(`fritz.steffenillium.de`)
    kind: Rule
    services:
    - name: fritz-service
      port: http
